--- a/index.css
+++ b/index.css
@@ -21,15 +21,16 @@
     background: rgb(247, 243, 243);
 }
 .every{
-    font-family: sans-serif;
-    font-size: 30px;
-    font-style: italic;
-    color: rgb(77, 3, 19);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 26px;
+    color: rgb(214, 122, 126);
+   font-style: italic;
+   text-align: center;
 }
 .clip{
     margin-top: 15px;
     color: rgb(102, 89, 89);
-    font-size: 13px;
+    font-size: 15px;
     font-family: poppins;
 }
 
@@ -63,4 +64,59 @@
 
 .img{
     margin-top: 30px;
+}
+.quick{
+    margin-top: 30px;
+}
+.quick > h3{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 25px;
+    color: rgb(179, 112, 126);
+    margin-top: 20px;
+}
+.quick > p{
+    margin-top: 15px;
+    color: rgb(102, 89, 89);
+    font-size: 13px;
+    font-family: poppins;
+    margin-top: 10px;
+}
+.acc{
+    margin-top: 30px;
+}
+
+.list{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#list{
+    list-style-type: none;
+}
+
+#list > li > img{
+    padding: 0;
+}
+
+#copy{
+    color: rgb(220, 103, 243);
+    font-size: 110px;
+    font-family: fantasy;
+    display: flex;
+    justify-content: center;
+}
+.list1{
+        display: flex;
+        flex-direction: column;
+            align-items: center;
+
+}
+#list > li{
+    padding: 12px 0;
+    font-family: poppins;
+    font-size: 22px;
+    color: rgb(146, 81, 1);
+}
+.footer{
+    background: rgb(250, 220, 144);
 }
